# life-is-beautiful-podcast

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: podcast.py
app/templates/: index.html
app/utils/: markdown_processor.py  podcast_generator.py
tests/: test_markdown_processor.py  test_podcast_generator.py
